# hair-simulation

./: README.md  main.py  pyproject.toml
assets/: female_head.mtl
assets/.mayaSwatches/: hair_mask.png_hcm.swatch
lib/: constants.py  hair_factory.py  mesh_loader.py  utils.py
module/: face_mesh.py  hair_particle.py  hair_strand.py  hair_system.py
render/: hair_line_renderer.py  hair_ribbon_renderer.py
shaders/: FaceFrag.glsl  FaceVert.glsl  HairFrag.glsl  HairRibbonFrag.glsl  HairRibbonVert.glsl  HairVert.glsl
tests/: helpers.py  test_hair_factory.py  test_hair_lines.py  test_hair_particle.py  test_hair_strand.py  test_hair_system.py  test_hair_utils.py  test_load_mesh.py  test_ribbon_renderer.py
ui/: debug_app.py  hair_input.py  hair_scene.py
ui/qt/: hair_widget.ui
